# VPopLib

./: Adult.cpp  Adult.h  Bee.cpp  Bee.h  Brood.cpp  Brood.h  CMakeLists-atmos.txt  CMakeLists-maybe.txt  CMakeLists-maybe2.txt  CMakeLists.txt  CMakeListsMaybe3.txt  CMakeSettings.json  ColdStorageSimulator.cpp  Colony.cpp  Colony.h  ColonyResource.cpp  ColonyResource.h  DateRangeValues.cpp  EGG.CPP  EGG.H  EPAData.cpp  EPAData.h  GlobalOptions.h  IEDItem.cpp  LARVA.CPP  LARVA.H  Mite.cpp  MiteTreatmentItem.cpp  MiteTreatmentItem.h  MiteTreatments.cpp  MiteTreatments.h  NutrientContaminationTable.cpp  NutrientContaminationTable.h  Queen.cpp  Queen.h  README.md  Session.cpp  Session.h  Spores.cpp  VPopLib.cpp  (+76 more)
TestFiles/: NutrientContaminationFile.txt  README.md  VPopLibUser.cpp  vplibuser.py
